# hackmit2025

./: README.md
cpp/: CMakeLists.txt  main.cpp  test.cpp
cpp/src/sponge/: file_manager.cpp  spong_gpu_rel.cu  sponge.h  sponge_cpu.cpp  sponge_gpu.cu
python/: tool.ipynb  train_tool.ipynb
